potenzieller fix für mediaquerie wrap
00>

--- a/assets/css/mediaqueries.css
+++ b/assets/css/mediaqueries.css
@@ -14,7 +14,7 @@
 @media only screen and (min-width : 678px) {
 #projects{
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 
